# llmcalc

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
js/: README.md  package-lock.json  package.json  tsconfig.json
js/src/: api.ts  cache.ts  cli.ts  config.ts  errors.ts  index.ts  models.ts  normalize.ts  pricing-client.ts
js/tests/: api.test.mjs  cache.test.mjs  cli.test.mjs  models.test.mjs  normalize.test.mjs  pricing-client.test.mjs
llmcalc/: __init__.py  api.py  cache.py  cli.py  config.py  errors.py  models.py  normalize.py  pricing_client.py
llmprice/: __init__.py  api.py  cache.py  cli.py  config.py  errors.py  normalize.py  pricing_client.py
tests/: test_api.py  test_cache.py  test_cli.py  test_models.py  test_normalize.py  test_pricing_client.py
