[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "llmcalc"
version = "0.1.1"
description = "Calculate LLM token costs from llmlite pricing data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Aman", url = "https://github.com/onlyoneaman" }
]
keywords = ["llm", "pricing", "tokens", "cost"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
  "platformdirs>=4.2,<5",
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
]

[project.urls]
Homepage = "https://github.com/onlyoneaman/llmcalc"
Repository = "https://github.com/onlyoneaman/llmcalc"
Issues = "https://github.com/onlyoneaman/llmcalc/issues"
Changelog = "https://github.com/onlyoneaman/llmcalc/blob/main/CHANGELOG.md"

[project.scripts]
llmcalc = "llmcalc.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.6,<1",
  "mypy>=1.10,<2",
  "twine>=5,<7",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
